# MagicMirror

./: CHANGELOG.md  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
.github/workflows/: build-app.yaml  build-server.yaml
backend/magic/: __init__.py
docs/cn/: faq.md  install.md  readme.md
docs/en/: faq.md  install.md
scripts/: build-server.sh  zip-server.js
src/: App.css  App.tsx  ImagePreview.tsx  main.tsx
src-python/: pyproject.toml  requirements.txt  server.py
src-python/magic/: app.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/assets/locales/: en.json  zh.json
src/components/: ImagePreview.tsx
src/hooks/: useDownload.ts  useDragDrop.ts  useOS.ts  useServer.ts  useSwapFace.ts  useTrayMenu.ts
src/pages/: Example.tsx  Launch.tsx  Mirror.tsx  Splash.tsx
src/services/: server.ts
src/styles/: global.css  mirror.css  mirror.module.css
